Removing deprecated features.
- Removed Jini related component attributes.
- Removed Java Security Manager related calls.
- Removed Random config field.
- Removed use of AccessibleObject.isAccessible.